changelog: fix typo unitalized -> uninitialized

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4512,7 +4512,7 @@ opendataplane (0.11.0)
        - timer, avoid cunit warnings for late timeouts
        - version, fix odp_version_api_str (1194, 1207)
        - fix clang (1203, 1023)
-       - validation: init: fix unitalized data in struct (1206)
+       - validation: init: fix uninitialized data in struct (1206)
        - linux-generic: setup_pktio_entry() null terminate pkio name (1055)
        - validation: odp_timer.c: (1048, 1056)
 
